fixed:default page debugging issues

--- a/chatroon-backend/src/main/resources/static/index.html
+++ b/chatroon-backend/src/main/resources/static/index.html
@@ -44,7 +44,7 @@
             <table id="conversation" class="table table-striped">
                 <thead>
                 <tr>
-                    <th>收到服务器消息</th>
+                    <th><b>Received server message</b></th>
                 </tr>
                 </thead>
                 <tbody id="greetings">
