--- a/chatroon-backend/src/main/resources/static/index.html
+++ b/chatroon-backend/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello WebSocket</title>
+    <title>Sockjs WebSocket</title>
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/main.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -15,7 +15,7 @@
     Javascript and reload this page!</h2></noscript>
 <div id="main-content" class="container">
     <div class="row">
-        <h1> Spring Boot + Websocket Demo</h1>
+        <h1> Spring Boot + Sockjs+ Websocket Demo</h1>
     </div>
     <br>
     <div class="row">
